--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeezone-back-end",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Projeto Integrador I e Internet I 2022.1",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/ifpi-picos/coffeezone-back-end#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "fast-glob": "^3.2.11",
