--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeezone-back-end",
-  "version": "1.9.1",
+  "version": "1.10.0",
   "description": "Projeto Integrador I e Internet I 2022.1",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "fast-glob": "^3.2.11",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.3.2",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "sequelize": "^6.19.0"
   }
