--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
+    "prisma": "^4.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
