--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./dist/app.js"
+    "start": "tsc && node ./dist/app.js",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
     "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
