--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./dist/app.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "dev": "nodemon --watch \"src/\" --exec \"ts-node src/app.ts\" -e ts"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,18 @@
   "homepage": "https://github.com/ifpi-picos/coffeezone-back-end#readme",
   "dependencies": {
     "@prisma/client": "^4.3.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
+    "@types/nodemon": "^1.19.2",
+    "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
+    "nodemon": "^2.0.20",
     "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
