--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/ifpi-picos/coffeezone-back-end#readme",
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "validator": "^13.7.0"
   },
