--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./dist/app.js",
     "lint": "eslint . --ext .ts",
-    "dev": "nodemon --watch \"src/\" --exec \"ts-node src/app.ts\" -e ts"
+    "dev": "nodemon --watch \"src/\" --exec \"ts-node src/app.ts\" -e ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
