--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./dist/app.js",
+    "start": "node ./dist/app.js",
     "lint": "eslint . --ext .ts",
     "dev": "nodemon --watch \"src/\" --exec \"ts-node src/app.ts\" -e ts",
     "build": "tsc"
