--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   "homepage": "https://github.com/ifpi-picos/coffeezone-back-end#readme",
   "dependencies": {
     "@prisma/client": "^4.3.1",
-    "@types/cors": "^2.8.12",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.16",
     "@types/nodemon": "^1.19.2",
     "@types/validator": "^13.7.7",
